# deepmif

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
apps/: run_batch.py
config/: kitti.yaml  mai_city.yaml  newer_college_quad.yaml
deepmif/dataset/: __init__.py  data_sampler.py  dataset_entry.py  kitti_odometry_dataset.py  lidar_dataset.py  types.py
deepmif/dataset/filters/: __init__.py  apply_pose.py  filter.py  range_filter.py  statistical_filter.py  voxel_filter.py
deepmif/model/: embedder.py  feature_octree.py  implicit_network.py  mif_decoder.py  mlp.py
deepmif/utils/: __init__.py  loss.py  mesher.py  tools.py
docker/: Dockerfile.dev  requirements.txt
test_datasets/kitti_odometry/: LICENSE.txt
test_datasets/kitti_odometry/poses/: 00.txt
test_datasets/kitti_odometry/sequences/00/: times.txt
test_datasets/sphere/poses/: 00.txt
test_datasets/sphere/sequences/00/: calib.txt  times.txt
